--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,42 @@
 </head>
 
 <body>
+    {# Barra de navegación con botón de Cerrar Sesión #}
+    {%if session.get('logged_in')%}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a href="{{url_for('index')}}" class="navbar-brand">
+                Mis curso
+            </a>
+            <div class="collapse navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="{{url_for('logout')}}" class="nav-link btn btn-danger text-white">Cerrar session</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    {%endif%}
+
+
     <div class="insertar">
         <a href="{{url_for('registrar')}}" class="btn btn-primary">Insertar nuevo paciente</a>
     </div>
     <div class="container mb-5">
+          {# Área para mostrar mensajes flash #}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class="list-unstyled">
+                    {% for category, message in messages %}
+                        <li class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
         <p>Total contado: {{ CantidadPacientes }}</p>
         <table class="table table-bordered">
             <thead>
@@ -42,10 +74,11 @@
                     <td>{{ item.email }}</td>
                     <td>{{ item.numero_documento }}</td>
                     <td>
-                        <a href="{{ url_for('ver_paciente', id=item.id) }}" class="btn btn-info btn-sm me-1">Ver detalle</a>
-                         <a href="{{ url_for('editar', id=item.id) }}" class="btn btn-warning btn-sm me-1">Editar</a> 
+                        <a href="{{ url_for('ver_paciente', id=item.id) }}" class="btn btn-info btn-sm me-1">Ver
+                            detalle</a>
+                        <a href="{{ url_for('editar', id=item.id) }}" class="btn btn-warning btn-sm me-1">Editar</a>
                         <a href="{{ url_for('eliminar', id=item.id) }}" class="btn btn-danger btn-sm"
-                            onclick="return confirm('¿Deseas eliminar este curso?');">Eliminar</a> 
+                            onclick="return confirm('¿Deseas eliminar este curso?');">Eliminar</a>
 
                     </td>
                 </tr>
@@ -55,7 +88,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    
+
 </body>
 
 </html>
